--- a/index.html
+++ b/index.html
@@ -34,7 +34,29 @@
         50% { background-position: 100% 50%; }
         100% { background-position: 0% 50%; }
       }
+      #crash-screen {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #fee2e2;
+        color: #991b1b;
+        padding: 2rem;
+        z-index: 9999;
+        overflow: auto;
+      }
     </style>
+    <script>
+      window.onerror = function(message, source, lineno, colno, error) {
+        var crashScreen = document.getElementById('crash-screen');
+        if (crashScreen) {
+          crashScreen.style.display = 'block';
+          crashScreen.innerHTML = '<h1>Application Crashed</h1><p><strong>Error:</strong> ' + message + '</p><p><strong>Source:</strong> ' + source + ':' + lineno + '</p><pre>' + (error ? error.stack : '') + '</pre>';
+        }
+      };
+    </script>
   <script type="importmap">
 {
   "imports": {
@@ -55,5 +77,6 @@
 </head>
   <body class="bg-slate-50 text-slate-900 antialiased overflow-hidden">
     <div id="root"></div>
+    <div id="crash-screen"></div>
   </body>
 </html>
